[package]
name = "free-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.2", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"

rmp-serde = { version = "1.1", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
log = { version = "0.4", optional = true }

[[bin]]
name = "free-storage"
required-features = ["cli"]

[features]
cli = ["tokio/macros", "rmp-serde", "clap", "log"]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
