[package]
name = "free-storage"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.2", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"

rmp-serde = { version = "1.1", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
dirs = { version = "4.0", optional = true }

[[bin]]
name = "storage"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["tokio/macros", "rmp-serde", "clap", "tracing-subscriber", "dirs"]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
